# pdfium

./: .gitignore  .gn  AUTHORS  BUILD.gn  DEPS  PRESUBMIT.py  README.md  \  chumpdetector.config  diff  groups  pdfium.gni  project.config  results.html
api/: DEPS  document.cpp  pdfium.cpp  pdfium.h  pdfium_config.cpp  pdfium_document.cpp  pdfium_unsupported_feature_delegate.cpp  unsupported_feature_delegate.cpp
build_overrides/: build.gni  pdfium.gni
core/fpdfapi/: cpdf_modulemgr.cpp  cpdf_modulemgr.h
core/fpdfdoc/: clines.cpp  cpdf_aaction.cpp  cpdf_aaction.h  cpdf_action.cpp  cpdf_action.h  cpdf_actionfields.h  cpdf_annot.cpp  cpdf_annot.h  cpdf_annotlist.cpp  cpdf_annotlist.h  cpdf_apsettings.h  cpdf_bookmark.cpp  cpdf_bookmarktree.h  cpdf_defaultappearance.cpp  cpdf_defaultappearance.h  cpdf_dest.cpp  cpdf_dest.h  cpdf_dest_unittest.cpp  cpdf_docjsactions.cpp  cpdf_docjsactions.h  cpdf_filespec.cpp  cpdf_filespec.h  cpdf_filespec_unittest.cpp  cpdf_formcontrol.cpp  cpdf_formcontrol.h  cpdf_formfield.cpp  cpdf_formfield.h  cpdf_iconfit.h  cpdf_interform.cpp  cpdf_interform.h  cpdf_link.h  cpdf_linklist.cpp  cpdf_metadata.cpp  cpdf_nametree.cpp  cpdf_nametree.h  cpdf_nametree_unittest.cpp  cpdf_numbertree.h  cpdf_occontext.cpp  cpdf_pagelabel.cpp  cpdf_pagelabel.h  (+22 more)
core/fpdftext/: cpdf_linkextract.cpp  cpdf_linkextract.h  cpdf_linkextract_unittest.cpp  cpdf_textpage.cpp  cpdf_textpage.h  cpdf_textpagefind.cpp  cpdf_textpagefind.h  fpdf_text_int_unittest.cpp
core/fxcodec/: fx_codec.h  fx_codec_def.cpp  fx_codec_def.h
core/fxconvert/: cfx_psrenderer.cpp  cfx_psrenderer.h  cpdf_psrenderdevice.cpp  cpdf_psrenderdevice.h
core/fxcrt/: autorestorer.h  bytestring.cpp  bytestring.h  bytestring_unittest.cpp  cfx_autorestorer.h  cfx_binarybuf.cpp  cfx_binarybuf.h  cfx_bitstream.cpp  cfx_blockbuffer.cpp  cfx_blockbuffer.h  cfx_bufferedstream.cpp  cfx_bufferedstream.h  cfx_bytestring.cpp  cfx_bytestring.h  cfx_bytestring_unittest.cpp  cfx_char.cpp  cfx_char.h  cfx_chariter.cpp  cfx_crtfileaccess.cpp  cfx_datetime.cpp  cfx_datetime.h  cfx_decimal.h  cfx_fileaccess_win64.cpp  cfx_fileaccess_win64.h  cfx_pdfstreamstream.cpp  cfx_pdfstreamstream.h  cfx_pdfstreamstream_unittest.cpp  cfx_raw_ptr.h  cfx_raw_ptr_unittest.cpp  cfx_retain_ptr.h  cfx_retain_ptr_unittest.cpp  cfx_reverse_iterator_template.h  cfx_seekablestreamproxy.cpp  cfx_seekablestreamproxy.h  cfx_string_c_template.cpp  cfx_string_c_template.h  cfx_string_data_template.cpp  cfx_string_data_template.h  cfx_string_pool_template.h  cfx_unowned_ptr.h  (+56 more)
core/fxge/: cfx_facecache.cpp  cfx_facecache.h  cfx_font.cpp  cfx_font.h  cfx_fontmapper.cpp  cfx_fontmgr.cpp  cfx_fontmgr.h  cfx_fxgedevice.h  cfx_gemodule.h  cfx_pathdata.cpp  cfx_pathdata.h  cfx_renderdevice.cpp  cfx_renderdevice.h  cfx_unicodeencoding.h  cfx_windowsrenderdevice.h  cttfontdesc.cpp  cttfontdesc.h  fx_dib.h  fx_font.h  fx_ge_linux.cpp  ifx_renderdevicedriver.cpp  ifx_renderdevicedriver.h
docs/: code-coverage.md  getting-started.md  safetynet.md
fpdfsdk/: cba_annotiterator.cpp  cba_annotiterator.h  cfx_systemhandler.cpp  cfx_systemhandler.h  cpdfsdk_annot.cpp  cpdfsdk_annot.h  cpdfsdk_annothandlermgr.cpp  cpdfsdk_annothandlermgr.h  cpdfsdk_appstream.cpp  cpdfsdk_appstream.h  cpdfsdk_baannot.cpp  cpdfsdk_baannot.h  cpdfsdk_baannothandler.cpp  cpdfsdk_baannothandler.h  cpdfsdk_formfillenvironment.cpp  cpdfsdk_formfillenvironment.h  cpdfsdk_interform.cpp  cpdfsdk_interform.h  cpdfsdk_pageview.cpp  cpdfsdk_pageview.h  cpdfsdk_widget.cpp  cpdfsdk_widget.h  cpdfsdk_widgethandler.cpp  cpdfsdk_widgethandler.h  cpdfsdk_xfawidget.h  cpdfsdk_xfawidgethandler.cpp  cpdfsdk_xfawidgethandler.h  fpdf_charset_assert.cpp  fpdf_dataavail.cpp  fpdf_dataavail_embeddertest.cpp  fpdf_ext.cpp  fpdf_flatten.cpp  fpdf_progressive.cpp  fpdf_searchex.cpp  fpdf_structtree.cpp  fpdf_structtree_embeddertest.cpp  fpdf_sysfontinfo.cpp  fpdf_transformpage.cpp  fpdf_transformpage_embeddertest.cpp  fpdfannot.cpp  (+30 more)
fxbarcode/: BC_TwoDimWriter.cpp  BC_Utils.cpp  cbc_codabar.cpp  cbc_codabar.h  cbc_code128.cpp  cbc_code39.cpp  cbc_code39.h  cbc_datamatrix.cpp  cbc_ean13.cpp  cbc_ean8.cpp  cbc_pdf417i.cpp  cbc_qrcode.cpp  cbc_upca.cpp  utils.h
fxjs/: CJX_Define.h  JS_Define.cpp  JS_Define.h  README  cfxjse_arguments.h  cfxjse_class.cpp  cfxjse_class.h  cfxjse_context.cpp  cfxjse_engine.cpp  cfxjse_engine.h  cfxjse_formcalc_context.cpp  cfxjse_resolveprocessor.cpp  cfxjse_value.cpp  cjs_annot.cpp  cjs_app.cpp  cjs_document.cpp  cjs_event_context.cpp  cjs_field.cpp  cjs_global.cpp  cjs_global.h  cjs_publicmethods.cpp  cjs_util.cpp  cjx_datawindow.cpp  cjx_datawindow.h  cjx_eventpseudomodel.cpp  cjx_eventpseudomodel.h  cjx_hostpseudomodel.cpp  cjx_hostpseudomodel.h  cjx_layoutpseudomodel.cpp  cjx_layoutpseudomodel.h  cjx_logpseudomodel.cpp  cjx_logpseudomodel.h  cjx_node.cpp  cjx_node.h  cjx_nodelist.cpp  cjx_object.cpp  cjx_object.h  cjx_signaturepseudomodel.cpp  cjx_signaturepseudomodel.h  fxjs_v8.cpp  (+4 more)
public/: fpdf_annot.h  fpdf_attachment.h  fpdf_catalog.h  fpdf_dataavail.h  fpdf_doc.h  fpdf_edit.h  fpdf_ext.h  fpdf_flatten.h  fpdf_formfill.h  fpdf_ppo.h  fpdf_progressive.h  fpdf_save.h  fpdf_searchex.h  fpdf_structtree.h  fpdf_sysfontinfo.h  fpdf_text.h  fpdf_transformpage.h  fpdfview.h
samples/: BUILD.gn  image_diff.cc  pdfium_exp_test.cc  pdfium_size.c  pdfium_test.cc
skia/: BUILD.gn
testing/: DEPS  SUPPRESSIONS  SUPPRESSIONS_PIXEL  embedder_test.cpp  embedder_test.h  embedder_test_main.cpp  fake_file_access.cpp  fake_file_access.h  fx_string_testhelpers.cpp  fx_string_testhelpers.h  mock_ifx_renderdevice.h  mock_ifx_renderdevicedriver.h  network_simulator.cpp  network_simulator.h  null_ifx_renderdevicedriver.h  range_set.cpp  savertest.cpp  savertest.h  test_support.cpp  test_support.h  unit_test_main.cpp  xfa_js_embedder_test.cpp  xfa_js_embedder_test.h
xfa/: DEPS
(+1952 files in other folders)
